--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,8 @@ version = 0.001
 name    = App-Spanel-TailWeblog
 
 [@Author::PERLANCAR]
+:version=0.594
 
-:version=0.58
 [Prereqs / TestRequires]
 ;Test::More=0.98
 
@@ -12,7 +12,8 @@ name    = App-Spanel-TailWeblog
 perl=5.010001
 strict=0
 warnings=0
-Getopt::Long=0
-IO::Tail=0
+Complete::Spanel=0
+Getopt::Long::Complete=0
+Logfile::Tail::Switch=0.004
 Time::HiRes=0
 
